// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutcomeIconSet render render all zero 1`] = `
<DocumentFragment>
  <div
    class="outcome-icon-set"
    title="0 Passed, 0 Incomplete, 0 Failed"
  >
    <span
      class="screen-reader-only"
    >
      0 Passed, 0 Incomplete, 0 Failed
    </span>
  </div>
</DocumentFragment>
`;

exports[`OutcomeIconSet render render all zero: OutcomeIcon props 1`] = `undefined`;

exports[`OutcomeIconSet render render incomplete zero 1`] = `
<DocumentFragment>
  <div
    class="outcome-icon-set"
    title="3 Passed, 0 Incomplete, 4 Failed"
  >
    <span
      class="outcome-icon outcome-icon-pass"
    >
      <mock-outcomeicon
        outcometype="pass"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-pass"
    >
      <mock-outcomeicon
        outcometype="pass"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-pass"
    >
      <mock-outcomeicon
        outcometype="pass"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-fail"
    >
      <mock-outcomeicon
        outcometype="fail"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-fail"
    >
      <mock-outcomeicon
        outcometype="fail"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-fail"
    >
      <mock-outcomeicon
        outcometype="fail"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-fail"
    >
      <mock-outcomeicon
        outcometype="fail"
      />
    </span>
    <span
      class="screen-reader-only"
    >
      3 Passed, 0 Incomplete, 4 Failed
    </span>
  </div>
</DocumentFragment>
`;

exports[`OutcomeIconSet render render incomplete zero: OutcomeIcon props 1`] = `
{
  "outcomeType": "pass",
}
`;

exports[`OutcomeIconSet render render with all properties 1`] = `
<DocumentFragment>
  <div
    class="outcome-icon-set"
    title="3 Passed, 2 Incomplete, 4 Failed"
  >
    <span
      class="outcome-icon outcome-icon-pass"
    >
      <mock-outcomeicon
        outcometype="pass"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-pass"
    >
      <mock-outcomeicon
        outcometype="pass"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-pass"
    >
      <mock-outcomeicon
        outcometype="pass"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-incomplete"
    >
      <mock-outcomeicon
        outcometype="incomplete"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-incomplete"
    >
      <mock-outcomeicon
        outcometype="incomplete"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-fail"
    >
      <mock-outcomeicon
        outcometype="fail"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-fail"
    >
      <mock-outcomeicon
        outcometype="fail"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-fail"
    >
      <mock-outcomeicon
        outcometype="fail"
      />
    </span>
    <span
      class="outcome-icon outcome-icon-fail"
    >
      <mock-outcomeicon
        outcometype="fail"
      />
    </span>
    <span
      class="screen-reader-only"
    >
      3 Passed, 2 Incomplete, 4 Failed
    </span>
  </div>
</DocumentFragment>
`;

exports[`OutcomeIconSet render render with all properties: OutcomeIcon props 1`] = `
{
  "outcomeType": "pass",
}
`;
